# goit-web-hw-07

./: .gitignore  config.ini  my_select.py  pyproject.toml  seeds.py
conf/: db.py  models.py
migrations/versions/: d07f1fa0c439_init.py
