[tool.poetry]
name = "db-postgres-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Mizhik <vlad.smilono2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
faker = "^25.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
